--- a/README
+++ b/README
@@ -30,14 +30,15 @@ It will work with either acts_as_taggable_on or acts_as_taggable_on_steroids
 
 == Installation
 
- In your gemfile gem 'acts_as_tagged_tree', :git => 'git://github.com/viglesias/acts_as_tagged_tree.git', :branch => 'master'
+  rails plugin install git://github.com/viglesias/acts_as_tagged_tree
+
 
 == Usage
 
 === Prepare database
 Generate and apply the migration:
 
-  rails g acts_as_tagged_tree_migration
+  ruby script/generate acts_as_tagged_tree_migration
   rake db:migrate
 
 === Modify your tagged model
